bevy_asset_loader/tests/ui_with_2d_3d_features/key_and_any_other_attribute.stderr
error: The 'key' attribute cannot be combined with any other asset defining attributes
 --> tests/ui_with_2d_3d_features/key_and_any_other_attribute.rs:8:5
  |
8 | /     #[asset(path = "test.ogg", key = "test")]
9 | |     test: Handle<AudioSource>,
  | |_____________________________^

error: The 'key' attribute cannot be combined with any other asset defining attributes
  --> tests/ui_with_2d_3d_features/key_and_any_other_attribute.rs:14:5
   |
14 | /     #[asset(standard_material)]
15 | |     #[asset(key = "test")]
16 | |     test: Handle<StandardMaterial>,
   | |__________________________________^

error: Wrong attribute type. Expected 'u32'
  --> tests/ui_with_2d_3d_features/key_and_any_other_attribute.rs:21:34
   |
21 |     #[asset(texture_atlas_layout(tile_size_x = 100., tile_size_y = 100., columns = 1, rows = 1))]
   |                                  ^^^^^^^^^^^^^^^^^^

error: Wrong attribute type. Expected 'u32'
  --> tests/ui_with_2d_3d_features/key_and_any_other_attribute.rs:21:54
   |
21 |     #[asset(texture_atlas_layout(tile_size_x = 100., tile_size_y = 100., columns = 1, rows = 1))]
   |                                                      ^^^^^^^^^^^^^^^^^^
